infrastructure/kubernetes-openshift/svc-fiap-car-resale.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-car-resale
  namespace: alissonskt-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: fiap-car-resale
  sessionAffinity: None
  type: ClusterIP
